1 - First version of a grep-alike that returns its filtered-out values