@@ -3,10 +3,14 @@ author              = Dominic Humphries <dominic@oneandoneis2.com>
 license             = Perl_5
 copyright_holder    = Dominic Humphries
 copyright_year      = 2013
-version             = 1
+version             = 2
 
 [AutoPrereqs]
 
 [PodWeaver]
 
 [@Basic]
+
+[TestRelease]
+[ConfirmRelease]
+[UploadToCPAN]
