@@ -1,1 +1,2 @@
-1 - First version of a grep-alike that returns its filtered-out values
+2   - Minor updates to clean up code & tests
+1   - First version of a grep-alike that returns its filtered-out values
